@@ -1,8 +1,12 @@
 package com.small.util;
 
+import cn.hutool.core.lang.Console;
+import com.google.common.collect.Lists;
+import com.small.pojo.Test;
 import one.util.streamex.StreamEx;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 /**
  * @author wesson
@@ -10,9 +14,23 @@ import java.util.List;
  */
 public class StreamExDemo {
     public static void main(String[] args) {
-        final List<Integer> integers = StreamEx.of(1, 2, 3, 4, 5).toList();
-        System.out.println(integers);
+        List<Test> one = StreamEx.of(new Test().setName("A-"),
+                new Test().setName("B-")).toList();
+        Console.log(one);
 
-        System.out.println(StreamEx.of(1, 2, 3, 45).without(3).toList());
+        List<Test> objects = Lists.newArrayList();
+        objects.addAll(one);
+        Console.log(objects);
+
+        List<Test> collect = one.stream().map(w -> {
+
+            final Test test = new Test();
+            test.setName(w.getName().replace("-", ""));
+            return test;
+        }).collect(Collectors.toList());
+
+        Console.log(one);
+        Console.log(objects);
+        Console.log(collect);
     }
 }
